Fix main item alignment

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
 }
 
